Fix footer columns not covering entire length of window on mobile

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -11,3 +11,12 @@
     width: calc(-15px + 30%);
 }
 
+@media screen and (max-width: 800px) {
+    .footer-col-1 {
+        width: calc(-15px + 100%);
+    }
+    .footer-col-2 {
+        width: calc(-15px + 100%)
+    }
+}
+
